--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   "devDependencies": {
     "brfs": "^1.4.0",
     "browserify": "^10.2.0",
+    "istanbul": "^0.3.14",
     "jasmine": "^2.3.1",
     "jqn": "0.0.3",
-    "lodash": "^3.9.1",
     "minijasminenode2": "^1.0.0",
     "uglify-js": "^2.4.22",
     "zuul": "git://github.com/59naga/zuul.git#5592c010065562e674a0a5d08598359008a518bd"
