--- a/bower.json
+++ b/bower.json
@@ -11,9 +11,8 @@
   "license": "MIT",
   "ignore": [
     "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
+    "object-parser",
+    "lib",
+    "test"
   ]
 }
