--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "update": "git tag v$(jqn bower version) &&  git push --tags",
 
     "test": "istanbul cover -- minijasminenode2 test/spec.js --verbose",
-    "posttest": "zuul test/API.spec.coffee --report"
+    "posttest": "zuul test/spec.js --report"
   },
 
   "dependencies": {
