--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "object-parser",
   "main": "object-parser.min.js",
   "description": "Multiple parse/stringify libraries",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   
   "homepage": "https://github.com/59naga/object-parser",
   "authors": [
