--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "object-parser",
   "main": "object-parser",
   "description": "Multiple parse/stringify function",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
 
   "scripts": {
     "build": "browserify $(jqn package name) -s OP | uglifyjs -cm > $(jqn package name).min.js",
@@ -14,7 +14,7 @@
 
   "dependencies": {
     "json5": "^0.4.0",
-    "json_ml": "0.0.1-alpha.1",
+    "json_ml": "0.0.1-alpha.2",
     "yamljs": "^0.2.2"
   },
   "devDependencies": {
