:pencil2: Fixed package.json files

--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "object-parser",
   "main": "object-parser.min.js",
+  "version": "0.0.1-alpha.2",
   "description": "Multiple parse/stringify function",
-  "version": "0.0.1-alpha.1",
   
   "homepage": "https://github.com/59naga/object-parser",
   "authors": [
@@ -11,7 +11,7 @@
   "license": "MIT",
   "ignore": [
     "**/.*",
-    "object-parser",
+    "object-parser.js",
     "lib",
     "test"
   ]
