--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "object-parser",
   "main": "object-parser.min.js",
-  "version": "0.0.1-alpha.3",
+  "version": "0.0.1",
   "description": "Multiple parse/stringify function",
   
   "homepage": "https://github.com/59naga/object-parser",
@@ -11,7 +11,6 @@
   "license": "MIT",
   "ignore": [
     "**/.*",
-    "object-parser.js",
     "lib",
     "test"
   ]
