--- a/package.json
+++ b/package.json
@@ -1,48 +1,44 @@
 {
   "name": "object-parser",
-  "main": "object-parser.js",
-  "version": "0.0.1-alpha.3",
+  "version": "0.0.1",
   "description": "Multiple parse/stringify function",
 
-  "scripts": {
-    "cover": "istanbul cover -- minijasminenode2 test/spec.js --verbose",
-
-    "Travis-CI commands":"",
-      "test": "$(jqn package scripts.cover)",
-      "posttest": "zuul test/spec.js --report",
-
-    "Bower build":"",
-      "build": "browserify $(jqn package name) -s OP | uglifyjs -cm > $(jqn package name).min.js",
-      "postbuild": "wc -c $(jqn bower main)",
-
-    "Bower update":"",
-      "update": "git tag v$(jqn bower version) &&  git push --tags"
-  },
-  "config": {
-    "ghooks": {
-      "pre-commit": "npm run build && npm run cover"
-    }
-  },
+  "main": "lib",
   "files": [
-    "object-parser.js",
     "lib"
   ],
 
+  "scripts": {
+    "test": "istanbul cover -- minijasminenode2 test --verbose",
+    "test-cloud": "zuul test --report",
+    
+    "localhost": "zuul test --local 59798 --open",
+
+    "prebuild": "browserify lib -s OP --debug | exorcist object-parser.js.map -b . > object-parser.js",
+    "build": "uglifyjs object-parser.js --in-source-map object-parser.js.map --mangle --compress --output object-parser.min.js --source-map object-parser.min.js.map",
+    "postbuild": "rm object-parser.js* && wc -c object-parser.min.js*"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm test"
+    }
+  },
+
   "dependencies": {
     "json5": "^0.4.0",
-    "json_ml": "0.0.1-alpha.4",
+    "json_ml": "^0.0.1",
     "yamljs": "^0.2.2"
   },
   "devDependencies": {
     "brfs": "^1.4.0",
-    "browserify": "^10.2.0",
+    "browserify": "^11.2.0",
+    "exorcist": "^0.4.0",
     "ghooks": "^0.3.2",
     "istanbul": "^0.3.14",
     "jasmine": "^2.3.1",
-    "jqn": "0.0.3",
     "minijasminenode2": "^1.0.0",
     "uglify-js": "^2.4.22",
-    "zuul": "git://github.com/59naga/zuul.git#5592c010065562e674a0a5d08598359008a518bd"
+    "zuul": "^3.6.0"
   },
 
   "keywords": [
